Update title tag in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
 <meta charset="UTF-8" />
-<title>3D Model</title>
+<title>3D Model (</title>
 
 <!-- model-viewer knihovna -->
 <script type="module"
