Replace model-viewer with iframe for 3D model

--- a/index.html
+++ b/index.html
@@ -29,12 +29,10 @@ height: 90vh;
 <h1>3D Model</h1>
 
 <!-- SEM NIC NEPIŠ – SOUBOR MUSÍ BÝT VE STEJNÉ SLOŽCE JAKO INDEX.HTML -->
-<model-viewer src="3DModel (1).obj"
-alt="3D model"
-auto-rotate
-camera-controls
-ar>
-</model-viewer>
+<iframe
+width="250" height="250" style="border:1px solid #eeeeee;"
+src="https://3dviewer.net/embed.html#model=‘../3DModel (1).obj‘$camera=169.48379,370.18722,427.39485,255.46234,255.54915,255.43774,0.00000,1.00000,0.00000,45.00000$cameramode=perspective$envsettings=fishermans_bastion,off$backgroundcolor=255,255,255,255$defaultcolor=200,200,200$edgesettings=off,0,0,0,1">
+</iframe>
 
 </body>
 </html>
