--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ height: 90vh;
 <!-- SEM NIC NEPIŠ – SOUBOR MUSÍ BÝT VE STEJNÉ SLOŽCE JAKO INDEX.HTML -->
 <iframe
 width="250" height="250" style="border:1px solid #eeeeee;"
-src="https://3dviewer.net/embed.html#model=‘../3DModel (1).obj‘$camera=169.48379,370.18722,427.39485,255.46234,255.54915,255.43774,0.00000,1.00000,0.00000,45.00000$cameramode=perspective$envsettings=fishermans_bastion,off$backgroundcolor=255,255,255,255$defaultcolor=200,200,200$edgesettings=off,0,0,0,1">
+src="https://3dviewer.net/embed.html#model=https://ins8more.github.io/doprdele-uz-ale/3DModel%20(1).obj$camera=169.48379,370.18722,427.39485,255.46234,255.54915,255.43774,0.00000,1.00000,0.00000,45.00000$cameramode=perspective$envsettings=fishermans_bastion,off$backgroundcolor=255,255,255,255$defaultcolor=200,200,200$edgesettings=off,0,0,0,1">
 </iframe>
 
 </body>
